# invenio-records-dublin-core

./: .editorconfig  .gitignore  .ruff.toml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.md  README.rst  babel.ini  pyproject.toml  run-js-linter.sh  run-tests.sh  setup.cfg  setup.py
docs/: conf.py  index.rst
invenio_records_dublin_core/: __init__.py  cli.py  config.py  ext.py  proxies.py  views.py  webpack.py
invenio_records_dublin_core/assets/semantic-ui/js/invenio_records_dublin_core/search/: index.js
invenio_records_dublin_core/assets/semantic-ui/js/invenio_records_dublin_core/search/components/: DublinCoreRecordResultsGridItem.js  DublinCoreRecordResultsListItem.js  index.js
invenio_records_dublin_core/assets/semantic-ui/less/invenio_records_dublin_core/: theme.less  variables.less
invenio_records_dublin_core/assets/semantic-ui/translations/invenio_records_dublin_core/: i18next-scanner.config.js  i18next.js  package-lock.json  package.json
invenio_records_dublin_core/assets/semantic-ui/translations/invenio_records_dublin_core/scripts/: compileCatalog.js  initCatalog.js
invenio_records_dublin_core/records/: __init__.py  api.py  models.py
invenio_records_dublin_core/records/jsonschemas/: __init__.py
invenio_records_dublin_core/records/jsonschemas/dublin-core/records/: dublin-core-record-v1.0.0.json
invenio_records_dublin_core/records/mappings/: __init__.py
invenio_records_dublin_core/records/mappings/os-v2/dublin-core/records/: record-v1.0.0.json
invenio_records_dublin_core/records/systemfields/: __init__.py  context.py  original.py  providers.py
invenio_records_dublin_core/resources/: __init__.py  config.py  resources.py
invenio_records_dublin_core/resources/serializers/: __init__.py  schema.py  serializer.py
invenio_records_dublin_core/services/: __init__.py  config.py  facets.py  permissions.py  services.py
invenio_records_dublin_core/services/components/: __init__.py  original.py
invenio_records_dublin_core/services/schemas/: __init__.py  metadata.py  record.py
invenio_records_dublin_core/templates/invenio_records_dublin_core/: base.html
invenio_records_dublin_core/templates/invenio_records_dublin_core/search/: search.html
invenio_records_global_search/: __init__.py  cli.py  config.py  ext.py  proxies.py  views.py  webpack.py
invenio_records_global_search/assets/semantic-ui/js/invenio_records_global_search/search/: index.js
invenio_records_global_search/assets/semantic-ui/js/invenio_records_global_search/search/components/: GlobalSearchBucketAggregationElement.js  GlobalSearchEmptyResults.js  GlobalSearchRecordResultsGridItem.js  GlobalSearchRecordResultsListItem.js  index.js
invenio_records_global_search/assets/semantic-ui/less/invenio_records_global_search/: theme.less  variables.less
invenio_records_global_search/assets/semantic-ui/translations/invenio_records_global_search/: i18next-scanner.config.js  i18next.js  package-lock.json  package.json  translations.pot
invenio_records_global_search/assets/semantic-ui/translations/invenio_records_global_search/messages/de/: translations.json
invenio_records_global_search/assets/semantic-ui/translations/invenio_records_global_search/messages/en/: translations.json
invenio_records_global_search/assets/semantic-ui/translations/invenio_records_global_search/scripts/: compileCatalog.js  initCatalog.js
invenio_records_global_search/records/: __init__.py  api.py  models.py
invenio_records_global_search/records/jsonschemas/: __init__.py
invenio_records_global_search/records/jsonschemas/global-search/records/: global-search-record-v1.0.0.json
invenio_records_global_search/records/mappings/: __init__.py
invenio_records_global_search/records/mappings/os-v2/global-search/records/: record-v1.0.0.json
invenio_records_global_search/records/systemfields/: __init__.py  context.py  original.py  parent.py  providers.py
invenio_records_global_search/resources/: __init__.py  config.py  resources.py
invenio_records_global_search/resources/serializers/: __init__.py  schema.py  serializer.py
invenio_records_global_search/services/: __init__.py  config.py  facets.py  permissions.py  services.py
invenio_records_global_search/services/components/: __init__.py  original.py  parent.py
invenio_records_global_search/services/schemas/: __init__.py  metadata.py  record.py
invenio_records_global_search/templates/invenio_records_global_search/: base.html
invenio_records_global_search/templates/invenio_records_global_search/records/: index.html
invenio_records_global_search/templates/invenio_records_global_search/search/: search.html
invenio_records_global_search/translations/: messages.pot
invenio_records_global_search/translations/de/LC_MESSAGES/: messages.po
invenio_records_global_search/translations/en/LC_MESSAGES/: messages.po
tests/: __init__.py  conftest.py
