# -*- coding: utf-8 -*-
#
# Copyright (C) 2023 Graz University of Technology.
#
# invenio-records-dublin-core is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
name = invenio-records-dublin-core
version = attr: invenio_records_dublin_core.__version__
description = InvenioRDM module for the Dublin Core data model
long_description = file: README.rst, CHANGES.rst
keywords = invenio rdm data model
license = MIT
author = TU Graz
author_email =
platforms = any
url = https://github.com/tu-graz-library/invenio-records-dublin-core
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    invenio-records-resources>=4.11.3

[options.extras_require]
tests =
    invenio-app>=1.3.4,<2.0.0
    pytest-black-ng>=0.4.0
    pytest-invenio>=2.1.0,<3.0.0
    ruff>=0.0.263
    sphinx>=4.5.0
opensearch2 =
    invenio-search[opensearch2]>=2.1.0,<3.0.0

[options.entry_points]
invenio_assets.webpack =
    invenio_records_dublin_core = invenio_records_dublin_core.webpack:theme
invenio_base.apps =
    invenio_records_dublin_core = invenio_records_dublin_core:InvenioRecordsDublinCore
invenio_base.api_apps =
    invenio_records_dublin_core = invenio_records_dublin_core:InvenioRecordsDublinCore
invenio_base.api_blueprints =
    invenio_records_dublin_core = invenio_records_dublin_core.views:create_record_bp
    invenio_records_dublin_core_record = invenio_records_dublin_core.views:blueprint
invenio_base.blueprints =
    invenio_records_dublin_core = invenio_records_dublin_core.views:create_blueprint
    invenio_records_dublin_core_record = invenio_records_dublin_core.views:blueprint
invenio_db.models =
    invenio_records_dublin_core_model = invenio_records_dublin_core.records.models
invenio_jsonschemas.schemas =
    dublin-core = invenio_records_dublin_core.records.jsonschemas
invenio_search.mappings =
    dublin-core = invenio_records_dublin_core.records.mappings

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = invenio_records_dublin_core/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_records_dublin_core/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_records_dublin_core/translations/messages.pot
output-dir = invenio_records_dublin_core/translations/

[update_catalog]
input-file = invenio_records_dublin_core/translations/messages.pot
output-dir = invenio_records_dublin_core/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --doctest-glob="*.rst" --doctest-modules --cov=invenio_records_dublin_core --cov-report=term-missing
testpaths = docs tests invenio_records_dublin_core
